# codex-shim

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  start.sh
.agents/skills/release-app/: SKILL.md
cli/: Cargo.toml
cli/src/: catalog.rs  config.rs  embedded_shim.rs  error.rs  health.rs  main.rs  models.rs  paths.rs  updater.rs
codex_shim/: __init__.py  catalog.py  cli.py  server.py  settings.py  translate.py
tauri-app/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
tauri-app/src/: App.tsx  api.ts  styles.css  types.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: README.md  icon.icns
tauri-app/src-tauri/src/: catalog.rs  commands.rs  config.rs  embedded_shim.rs  error.rs  health.rs  lib.rs  main.rs  models.rs  paths.rs  shim.rs  updater.rs
tauri-app/src/components/: ActiveModel.tsx  Dashboard.tsx  ErrorBoundary.tsx  Icon.tsx  LogViewer.tsx  ModelForm.tsx  ModelsManager.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx
tauri-app/src/hooks/: useAdaptivePolling.ts
tests/: test_reasoning_roundtrip.py  test_server.py  test_settings_catalog.py  test_translate.py
