[package]
name = "codex-shim-cli"
version = "0.6.0"
description = "Lightweight Rust CLI and local Responses API shim for Codex."
authors = ["codex-shim contributors"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "codex-shim-cli"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
bytes = "1"
directories = "5"
futures-core = "0.3"
hex = "0.4"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
which = "6"
